@@ -1,0 +1,1 @@
+<p>Blocks widgets.</p>
