@@ -62,6 +62,7 @@ Release 0.9.11
 - ZMThemes: remove setActiveThemeId(); this means the theme builder won't
   automatically switch to a new theme, but that should be ok with the new theme
   management page
+- add foundation for block handling
 
 Release 0.9.10
 - restructure store and admin code into separate apps with most of the store
